[gd_scene load_steps=30 format=3 uid="uid://cy0k4xhuqc3ns"]

[ext_resource type="Script" path="res://src/Level.gd" id="1_ppvv4"]
[ext_resource type="Texture2D" uid="uid://o4lr32imm53a" path="res://assets/sprites/sheet.png" id="1_q4l36"]
[ext_resource type="Script" path="res://src/Parallax.gd" id="1_sl2hh"]
[ext_resource type="PackedScene" uid="uid://b7awvgcdecm6q" path="res://src/bird.tscn" id="2_g1ak3"]
[ext_resource type="AudioStream" uid="uid://by1oo6no4hgua" path="res://assets/sounds/sfxs/achievment3.wav" id="2_usri8"]
[ext_resource type="AudioStream" uid="uid://cd1lli55k3bvk" path="res://assets/sounds/sfxs/lose.wav" id="3_2ml3k"]
[ext_resource type="Script" path="res://src/PipeSpawner.gd" id="4_pyrkw"]
[ext_resource type="FontFile" uid="uid://io3ov7uuo761" path="res://assets/fonts/arcadeclassic/ARCADECLASSIC.TTF" id="5_hmgq7"]
[ext_resource type="Texture2D" uid="uid://dmcxhrg1dgfl7" path="res://assets/sprites/start_button.png" id="6_7cgvi"]
[ext_resource type="AudioStream" uid="uid://b5fqk1iw2afcu" path="res://assets/sounds/sfxs/gentle_hit1.wav" id="6_a0bwh"]
[ext_resource type="AudioStream" uid="uid://dgfhhm4of5rwf" path="res://assets/sounds/sfxs/wall_hurt.wav" id="6_sg3jo"]
[ext_resource type="AudioStream" uid="uid://den4lb5mpln1" path="res://assets/sounds/sfxs/achievment5.wav" id="10_p6ywa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhfbr"]
size = Vector2(112, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afmso"]
size = Vector2(8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_70hq2"]
font = ExtResource("5_hmgq7")
font_size = 14
shadow_offset = Vector2(0.978, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvvt7"]
atlas = ExtResource("1_q4l36")
region = Rect2(135, 9, 26, 15)

[sub_resource type="InputEventAction" id="InputEventAction_f4ckb"]
action = &"ui_accept"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_dr1k5"]
events = [SubResource("InputEventAction_f4ckb")]

[sub_resource type="AtlasTexture" id="AtlasTexture_2b7tg"]
atlas = ExtResource("6_7cgvi")
region = Rect2(0, 0, 32, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3xfm"]
atlas = ExtResource("6_7cgvi")
region = Rect2(0, 18, 32, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rexhr"]
atlas = ExtResource("6_7cgvi")
region = Rect2(0, 9, 32, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hqgx"]
atlas = ExtResource("1_q4l36")
region = Rect2(135, 25, 27, 15)

[sub_resource type="Animation" id="Animation_0vro4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../SFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../SFX:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_p6ywa")]
}

[sub_resource type="Animation" id="Animation_cyky8"]
resource_name = "blink"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n0b4p"]
resource_name = "partial_blink"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(2, 2, 2, 0.498039), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../SFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2kgv"]
_data = {
"RESET": SubResource("Animation_0vro4"),
"blink": SubResource("Animation_cyky8"),
"partial_blink": SubResource("Animation_n0b4p")
}

[sub_resource type="Animation" id="Animation_7lwvh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewGame:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NewGame:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartButton:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StartButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StartButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NewGame:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y3ddf"]
resource_name = "show_up"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewGame:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NewGame:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartButton:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StartButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StartButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NewGame:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6vx4"]
_data = {
"RESET": SubResource("Animation_7lwvh"),
"show_up": SubResource("Animation_y3ddf")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_ppvv4")
freeze_node_paths = Array[NodePath]([NodePath("BG"), NodePath("Floor/Area2D"), NodePath("PipeSpawner")])
new_score_sfx = ExtResource("2_usri8")
game_over_sfx = ExtResource("3_2ml3k")
metadata/_edit_vertical_guides_ = [45.0, 72.0, 80.0]
metadata/_edit_horizontal_guides_ = [80.0]

[node name="BG" type="Node2D" parent="."]

[node name="SkyBG" type="Sprite2D" parent="BG"]
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 28, 40, 31)

[node name="SkyBG" type="Sprite2D" parent="BG/SkyBG"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 28, 40, 31)

[node name="SkyBG2" type="Sprite2D" parent="BG"]
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 83, 40, 13)

[node name="SkyBG2" type="Sprite2D" parent="BG/SkyBG2"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 83, 40, 13)

[node name="SkyBG3" type="Sprite2D" parent="BG"]
position = Vector2(0, 2)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 83, 40, 13)

[node name="SkyBG3" type="Sprite2D" parent="BG/SkyBG3"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 83, 40, 13)

[node name="Parallax" type="Node2D" parent="BG"]
script = ExtResource("1_sl2hh")

[node name="BG" type="Node2D" parent="BG/Parallax"]
metadata/loop_offset = 80.0

[node name="Sky" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 22)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 28, 40, 31)
metadata/motion_offset = 0.05

[node name="Sky" type="Sprite2D" parent="BG/Parallax/BG/Sky"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 28, 40, 31)

[node name="Sky2" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 24)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(83, 28, 40, 31)
metadata/motion_offset = 0.5

[node name="Sky2" type="Sprite2D" parent="BG/Parallax/BG/Sky2"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(83, 28, 40, 31)

[node name="Mountain" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 38)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(124, 41, 40, 18)
metadata/motion_offset = 0.5

[node name="Mountain" type="Sprite2D" parent="BG/Parallax/BG/Mountain"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(124, 41, 40, 18)

[node name="Mountain2" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 48)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 60, 40, 14)
metadata/motion_offset = 1.0

[node name="Mountain2" type="Sprite2D" parent="BG/Parallax/BG/Mountain2"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 60, 40, 14)

[node name="Ground" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 49)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 60, 40, 14)
metadata/motion_offset = 1.0

[node name="Ground" type="Sprite2D" parent="BG/Parallax/BG/Ground"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 60, 40, 14)

[node name="Ground2" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 54)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(83, 60, 40, 14)
metadata/motion_offset = 1.5

[node name="Ground2" type="Sprite2D" parent="BG/Parallax/BG/Ground2"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(83, 60, 40, 14)

[node name="Grass" type="Sprite2D" parent="BG/Parallax/BG"]
position = Vector2(0, 66)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 19, 40, 4)
metadata/motion_offset = 2.0

[node name="Grass" type="Sprite2D" parent="BG/Parallax/BG/Grass"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 19, 40, 4)

[node name="Floor" type="Node2D" parent="BG/Parallax"]
metadata/loop_offset = 72.0

[node name="Grass" type="Sprite2D" parent="BG/Parallax/Floor"]
position = Vector2(0, 70)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 24, 40, 3)
metadata/motion_offset = 2.0

[node name="Grass" type="Sprite2D" parent="BG/Parallax/Floor/Grass"]
position = Vector2(36, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(42, 24, 40, 3)

[node name="Floor" type="Sprite2D" parent="BG/Parallax/Floor"]
z_index = 1
position = Vector2(0, 73)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 20, 40, 7)
metadata/motion_offset = 2.0

[node name="Floor" type="Sprite2D" parent="BG/Parallax/Floor/Floor"]
position = Vector2(36, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(1, 20, 40, 7)

[node name="Sky" type="Node2D" parent="BG/Parallax"]
metadata/loop_offset = 80.0

[node name="Cloud" type="Sprite2D" parent="BG/Parallax/Sky"]
position = Vector2(0, 5)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(83, 83, 40, 13)
metadata/motion_offset = 0.025

[node name="Cloud" type="Sprite2D" parent="BG/Parallax/Sky/Cloud"]
position = Vector2(40, 0)
texture = ExtResource("1_q4l36")
centered = false
region_enabled = true
region_rect = Rect2(83, 83, 40, 13)

[node name="Floor" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Floor" type="CollisionShape2D" parent="Floor"]
z_index = 1
position = Vector2(24, 77)
shape = SubResource("RectangleShape2D_lhfbr")
debug_color = Color(0.737255, 0.223529, 1, 0.419608)

[node name="Ceil" type="CollisionShape2D" parent="Floor"]
z_index = 1
position = Vector2(24, -19)
shape = SubResource("RectangleShape2D_lhfbr")
debug_color = Color(0.737255, 0.223529, 1, 0.419608)

[node name="Area2D" type="Area2D" parent="Floor"]
position = Vector2(24, 77)
collision_layer = 0
collision_mask = 2

[node name="FloorShape" type="CollisionShape2D" parent="Floor/Area2D"]
z_index = 1
shape = SubResource("RectangleShape2D_afmso")
debug_color = Color(0.882353, 0.333333, 0, 0.419608)

[node name="CeilShape" type="CollisionShape2D" parent="Floor/Area2D"]
z_index = 1
position = Vector2(0, -89)
shape = SubResource("RectangleShape2D_afmso")
debug_color = Color(0.882353, 0.333333, 0, 0.419608)

[node name="Bird" parent="." instance=ExtResource("2_g1ak3")]
process_mode = 1
position = Vector2(22, 21)
mass = 0.01

[node name="PipeSpawner" type="Node2D" parent="." node_paths=PackedStringArray("floor_sprite", "floor_area", "score_label")]
script = ExtResource("4_pyrkw")
floor_sprite = NodePath("../BG/Parallax/Floor/Floor")
floor_area = NodePath("../Floor/Area2D")
score_label = NodePath("../GUI/Label")
bird_path = NodePath("../Bird")
pipe_collide_sfx = ExtResource("6_sg3jo")
floor_collide_sfx = ExtResource("6_a0bwh")

[node name="SFX" type="AudioStreamPlayer" parent="PipeSpawner"]
process_mode = 3
stream = ExtResource("6_sg3jo")

[node name="Timer" type="Timer" parent="PipeSpawner"]
one_shot = true
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]
layer = 2

[node name="Label" type="Label" parent="GUI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_70hq2")
horizontal_alignment = 1

[node name="NewGame" type="TextureRect" parent="GUI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 7.0
offset_right = 13.0
offset_bottom = 22.0004
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_dvvt7")

[node name="StartButton" type="TextureButton" parent="GUI"]
process_mode = 4
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -7.0
offset_right = 16.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_dr1k5")
shortcut_in_tooltip = false
texture_normal = SubResource("AtlasTexture_2b7tg")
texture_pressed = SubResource("AtlasTexture_b3xfm")
texture_hover = SubResource("AtlasTexture_rexhr")

[node name="NewBest" type="TextureRect" parent="GUI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -13.5
offset_top = 15.0
offset_right = 13.5
offset_bottom = 30.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_4hqgx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/NewBest"]
libraries = {
"": SubResource("AnimationLibrary_g2kgv")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI"]
libraries = {
"": SubResource("AnimationLibrary_y6vx4")
}

[node name="SFX" type="AudioStreamPlayer" parent="GUI"]
stream = ExtResource("10_p6ywa")

[connection signal="bird_died" from="PipeSpawner" to="." method="_on_bird_died"]
[connection signal="timeout" from="PipeSpawner/Timer" to="PipeSpawner" method="spawn_pipe"]
[connection signal="pressed" from="GUI/StartButton" to="." method="new_game"]
